[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/error/error_withbackground.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/dispCRAZY.png" type="Texture" id=2]
[ext_resource path="res://assets/levels/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/titlescreen/smol.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/titlescreen/title.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/titlescreen/start_button.png" type="Texture" id=6]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D displace : hint_albedo;
uniform float dispAmt : hint_range(0, 0.1);
uniform float abberationAmtX : hint_range(0, 0.1);
uniform float abberationAmtY : hint_range(0, 0.1);
uniform float dispSize : hint_range(0, 2);

void fragment ()
{
	// Displace
	vec4 disp = texture(displace, SCREEN_UV * dispSize);
	vec2 newUV = SCREEN_UV + disp.xy * dispAmt;
	// Chromatic Abberation
	
	COLOR.r = texture(SCREEN_TEXTURE, newUV - vec2(abberationAmtX, abberationAmtY)).r;
	COLOR.g = texture(SCREEN_TEXTURE, newUV).g;
	COLOR.b = texture(SCREEN_TEXTURE, newUV + vec2(abberationAmtX, abberationAmtY)).b;
	COLOR.a = texture(SCREEN_TEXTURE, newUV).a;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/dispAmt = 0.0
shader_param/abberationAmtX = 0.003
shader_param/abberationAmtY = 0.002
shader_param/dispSize = 0.0
shader_param/displace = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="BackgroundSprite" type="Sprite" parent="."]
position = Vector2( 642, 443 )
texture = ExtResource( 1 )

[node name="GlitchFX" type="ColorRect" parent="."]
material = SubResource( 4 )
margin_left = -32.0
margin_top = -4.0
margin_right = 1325.0
margin_bottom = 869.0

[node name="DispSizeTimer" type="Timer" parent="GlitchFX"]
wait_time = 0.1
autostart = true

[node name="TitleCharacterSprite" type="Sprite" parent="."]
position = Vector2( 687, 1125 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="TitleSprite" type="Sprite" parent="."]
position = Vector2( 647, -632 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 505.0
margin_top = 598.0
margin_right = 804.0
margin_bottom = 701.0
mouse_default_cursor_shape = 2
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
disabled = true
flat = true

[node name="Sprite" type="Sprite" parent="Button"]
position = Vector2( 149, 51 )
texture = ExtResource( 6 )

[node name="StartButtonTimer" type="Timer" parent="Button"]
wait_time = 0.1

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
margin_left = -232.0
margin_top = -292.0
margin_right = 1702.0
margin_bottom = 1039.0
color = Color( 0, 0, 0, 0 )

[node name="FadeToBlackTimer" type="Timer" parent="BlackScreen"]
wait_time = 0.7

[connection signal="timeout" from="GlitchFX/DispSizeTimer" to="." method="_on_DispSizeTimer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Button/StartButtonTimer" to="." method="_on_StartButtonTimer_timeout"]
[connection signal="timeout" from="BlackScreen/FadeToBlackTimer" to="." method="_on_FadeToBlackTimer_timeout"]
